@@ -13,11 +13,14 @@ CONFIG
 DISTRIBUTION
     Added: Support for Ubuntu Bionic Beaver (18.04) LTS
 
-FRONTEND:
+FRONTEND
     Fixed: Closing button being removed in all dialog UI while it must be removed only in alert and confirmation dialogs
 
 INSTALLER
     Fixed: DIRMNGR(8) daemon not being terminated when expected (APT key management -- Debian adapter) -- Backported from 1.6.x
+
+TOOLS
+    Backported: imscp-get-master-sql-user-pwd.pl script from 1.6.x branch (Script that make possible to retrieve i-MSCP master SQL user and password)
 
 YOUTRACK
     IP-1745 Rsyslog log rotation failure -- Initctl command (Upstart) doesn't know the 'rotate' action -- Ubuntu 14.04/Trusty Thar
